# Xaura

./: .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_PLAN.md  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
src/xaura/: __init__.py  __main__.py  cli.py
src/xaura/export/: __init__.py  csv_export.py  exporter.py  plot_export.py
src/xaura/models/: __init__.py  base.py  defaults.py  registry.py
src/xaura/models/classifiers/: __init__.py  lightgbm_cls.py  logistic.py  random_forest.py  xgboost_cls.py
src/xaura/models/clusterers/: __init__.py  dbscan.py  hierarchical.py  kmeans.py
src/xaura/models/regressors/: __init__.py  linear.py  random_forest_reg.py  ridge_lasso.py  xgboost_reg.py
src/xaura/profiler/: __init__.py  dataprofile.py  profiler.py
src/xaura/server/: __init__.py
src/xaura/server/routes/: __init__.py
src/xaura/store/: __init__.py  sqlite_store.py
src/xaura/visualisation/: __init__.py  _style.py  matplotlib_charts.py  matplotlib_clustering.py  matplotlib_regression.py  plotly_charts.py  plotly_clustering.py  plotly_regression.py
tests/: conftest.py  test_classifiers.py  test_cli.py  test_clusterers.py  test_defaults.py  test_export.py  test_integration.py  test_profiler.py  test_regressors.py  test_store.py  test_visualisation.py  test_visualisation_clustering.py  test_visualisation_regression.py
